PATCH: better release for CC

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,5 +1,7 @@
 ---
 Name: silverstripe-cms-userswitcher
+Only:
+  moduleexists: 'sandervanscheepen/silverstripe-cms-userswitcher'
 ---
 SilverStripe\Admin\LeftAndMain:
   extensions:
